--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
       <section class="resume-section p-3 p-lg-5 d-flex d-column" id="about">
         <div class="my-auto">
-          <h1 class="mb-0">Andrew
+          <h1 class="mb-0">Andy
             <span class="text-primary">Paul</span>
           </h1>
           <div class="subheading mb-5">3542 Berry Street · Cheyenne Wells, CO 80810 · (317) 585-8468 ·
