--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <h1 class="mb-0">Andy
             <span class="text-primary">Paul</span>
           </h1>
-          <div class="subheading mb-5">38b Granville Sqaure· London, CO 80810 · (317) 585-8468 ·
+          <div class="subheading mb-5">Farringdon· London, CO 80810 · (317) 585-8468 ·
             <a href="mailto:name@email.com">name@email.com</a>
           </div>
           <p class="mb-5">I am experienced in leveraging agile frameworks to provide a robust synopsis for high level overviews. Iterative approaches to corporate strategy foster collaborative thinking to further the overall value proposition.</p>
